# lerux

./: .gitignore  AGENTS.md  BUILDING-standalone.md  CONTEXT.md  Cargo.toml  Makefile  NOTES.md  PLAN.md  README.md  VENDORED.md  build.rs  clippy.sh  justfile  loader.img  report.txt  rust-toolchain.toml  sel4.elf  sel4_32.elf
tools/lerux-cli/: Cargo.toml
tools/lerux-cli/src/: analyze.rs  bench.rs  board.rs  build.rs  build_sdk.rs  channel_consts.rs  channels.rs  clippy.rs  config_cmd.rs  deploy.rs  disk_img.rs  fetch.rs  http_one.rs  hw_lock.rs  image_digest.rs  libclang.rs  main.rs  package.rs  path.rs  process.rs  profile.rs  qemu.rs  qos_check.rs  smoke_expects.rs  system.rs  tcp_echo.rs  test.rs
tools/lerux-cli/src/install/: deb.rs  mod.rs  tarball.rs
userspace/: Cargo.toml
userspace/bootstrap/: Cargo.toml
userspace/bootstrap/src/: exec.rs  initfs.rs  initnsmgr.rs  main.rs  procmgr.rs  start.rs
userspace/config/: Cargo.toml
userspace/config/src/: lib.rs
userspace/crates/lerux-driver-protocols/: Cargo.toml
userspace/crates/lerux-driver-protocols/src/: lib.rs
userspace/crates/lerux-fat/: Cargo.toml
userspace/crates/lerux-fat/src/: lib.rs
userspace/crates/lerux-fs/: Cargo.toml
userspace/crates/lerux-fs/src/: lib.rs
userspace/crates/lerux-interface-types/: Cargo.toml
userspace/crates/lerux-interface-types/src/: lib.rs
userspace/crates/lerux-ipc/: Cargo.toml
userspace/crates/lerux-ipc/src/: client.rs  lib.rs
userspace/crates/lerux-logging/: Cargo.toml
userspace/crates/lerux-logging/src/: debug.rs  lib.rs  serial.rs  server.rs
userspace/crates/lerux-serial-queue/: Cargo.toml
userspace/crates/lerux-serial-queue/src/: lib.rs
userspace/crates/lerux-service-async/: Cargo.toml
userspace/crates/lerux-sync/: Cargo.toml
userspace/crates/lerux-sync/src/: lib.rs
userspace/crates/lerux-virtio-hal/: Cargo.toml
userspace/crates/lerux-virtio-pci/: Cargo.toml
userspace/daemon/: Cargo.toml
userspace/daemon/src/: lib.rs
userspace/drivers/rtcd/: Cargo.toml  build.rs
userspace/init/: Cargo.toml
userspace/init/src/: main.rs  scheduler.rs  service.rs
userspace/initfs/: Cargo.toml
userspace/initfs-tools/: Cargo.toml
userspace/initfs-tools/src/: lib.rs
userspace/initfs-tools/tests/: archive_and_read.rs
userspace/lerux-entry/: Cargo.toml
userspace/lerux-entry/link/: x86_64.ld
userspace/lerux-entry/src/: lib.rs  stack.rs  start.rs
userspace/lerux-filesystem/: Cargo.toml  README.md
userspace/lerux-filesystem/src/: block.rs  filesystem.rs  key.rs  lib.rs  test_helpers.rs  tests.rs  transaction.rs
userspace/lerux-filesystem/tests/: cli.rs
userspace/lerux-link/: Cargo.toml  build.rs  lib.rs
userspace/lerux-proc/: Cargo.toml
userspace/lerux-proc/src/: lib.rs
userspace/lerux-shim/: Cargo.toml
userspace/lerux-shim/src/: lib.rs
userspace/logd/: Cargo.toml
userspace/logd/src/: main.rs  scheme.rs
userspace/pds/backup/: Cargo.toml
userspace/pds/blk-client/: Cargo.toml
userspace/pds/blk-server/: Cargo.toml
userspace/pds/boot-init/: Cargo.toml
userspace/pds/chat-client/: Cargo.toml
userspace/pds/cmos-rtc-driver/: Cargo.toml
userspace/pds/config-server/: Cargo.toml
userspace/pds/crash-demo/: Cargo.toml
userspace/pds/debug-handler/: Cargo.toml
userspace/pds/echo-client/: Cargo.toml
userspace/pds/echo-server/: Cargo.toml
userspace/pds/edit/: Cargo.toml
userspace/pds/emmc2-driver/: Cargo.toml
userspace/pds/fetch-client/: Cargo.toml
userspace/pds/fs-client/: Cargo.toml
userspace/pds/fs-server/: Cargo.toml
userspace/pds/genet-driver/: Cargo.toml
userspace/pds/goldfish-rtc-driver/: Cargo.toml
userspace/pds/hello/: Cargo.toml
userspace/pds/http-file-browser/: Cargo.toml
userspace/pds/http-server/: Cargo.toml
userspace/pds/log-server/: Cargo.toml
userspace/pds/net-client/: Cargo.toml
userspace/pds/net-server/: Cargo.toml
userspace/pds/pl031-driver/: Cargo.toml
userspace/pds/rdtime-timer-driver/: Cargo.toml
userspace/pds/serial-driver/: Cargo.toml
userspace/pds/serial-virt/: Cargo.toml
userspace/pds/shell/: Cargo.toml
userspace/pds/sp804-driver/: Cargo.toml
userspace/pds/supervisor/: Cargo.toml
userspace/pds/tsc-timer-driver/: Cargo.toml
userspace/pds/virtio-blk-driver/: Cargo.toml
userspace/pds/virtio-net-driver/: Cargo.toml
userspace/pds/virtio-pci-driver/: Cargo.toml
userspace/ramfs/: Cargo.toml
userspace/ramfs/src/: filesystem.rs  main.rs  scheme.rs
userspace/randd/: Cargo.toml
userspace/randd/src/: main.rs  scheme.rs
userspace/redoxfs/: Cargo.toml  README.md
userspace/redoxfs/src/: allocator.rs  filesystem.rs  header.rs  lib.rs  transaction.rs
userspace/redoxfs/tests/: cli.rs
userspace/rt-bin/: Cargo.toml  build.rs  lib.rs
userspace/runtime/: Cargo.toml
userspace/runtime/redox-rt/: Cargo.toml
userspace/rustc-smoke/: Cargo.toml
userspace/rustc-smoke/src/: main.rs
userspace/scheme-utils/: Cargo.toml
userspace/scheme-utils/src/: blocking.rs  lib.rs  readiness_based.rs
userspace/systems/templates/: blk-composed.system.template  blk-emmc-rpi.system.template  blk-riscv.system.template  blk-x86.system.template  blk.system.template  composed.system.template  debug.system.template  echo-x86.system.template  echo.system.template  fetch.system.template  fs.system.template  hello.system.template  http-composed.system.template  http-virtio-riscv.system.template  http-virtio-x86.system.template  http-virtio.system.template  init-riscv.system.template  init-x86.system.template  init.system.template  ipc-composed.system.template  isolation.system.template  net-composed.system.template  net-genet-rpi.system.template  net-riscv.system.template  net-x86.system.template  net.system.template  serial-hello-x86.system.template  serial-hello.system.template  virtio-hello-riscv.system.template  virtio-hello-x86.system.template  virtio-hello.system.template  workstation-riscv.system.template  workstation-rpi4.system.template  workstation-x86.system.template  workstation.system.template
userspace/zerod/: Cargo.toml
userspace/zerod/src/: main.rs  scheme.rs
(+691 files in other folders)
