[workspace]
resolver = "3"
members = [
    "userspace/pds/hello",
    "userspace/pds/serial-driver",
    "userspace/pds/virtio-blk-driver",
    "userspace/pds/virtio-net-driver",
    "userspace/crates/lerux-logging",
    "userspace/crates/lerux-ipc",
    "userspace/crates/lerux-sync",
]

[workspace.dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-microkit = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-pl011-driver = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-driver-interfaces = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-microkit-driver-adapters = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-microkit-simple-ipc = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-logging = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-sync = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-virtio-blk = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-virtio-net = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-virtio-hal-impl = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-shared-memory = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-shared-ring-buffer = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-shared-ring-buffer-block-io-types = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-shared-ring-buffer-block-io = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-shared-ring-buffer-bookkeeping = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-abstract-allocator = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
virtio-drivers = { version = "0.13.0", default-features = false }
embedded-hal-nb = "1.0"
lock_api = "0.4.14"
log = "0.4"
serde = { version = "1", default-features = false, features = ["derive"] }