[workspace]
resolver = "3"
members = [
    "tools/lerux-cli",
    "userspace/pds/hello",
    "userspace/pds/serial-driver",
    "userspace/pds/serial-virt",
    "userspace/crates/lerux-serial-queue",
    "userspace/pds/echo-server",
    "userspace/pds/echo-client",
    "userspace/pds/blk-server",
    "userspace/pds/blk-client",
    "userspace/pds/net-server",
    "userspace/pds/net-client",
    "userspace/pds/fetch-client",
    "userspace/pds/supervisor",
    "userspace/pds/pl031-driver",
    "userspace/pds/sp804-driver",
    "userspace/pds/virtio-blk-driver",
    "userspace/pds/virtio-net-driver",
    "userspace/pds/virtio-pci-driver",
    "userspace/pds/genet-driver",
    "userspace/pds/emmc2-driver",
    "userspace/pds/http-server",
    "userspace/crates/lerux-logging",
    "userspace/crates/lerux-ipc",
    "userspace/crates/lerux-interface-types",
    "userspace/crates/lerux-fs",
    "userspace/crates/lerux-fat",
    "userspace/crates/lerux-service-async",
    "userspace/pds/fs-server",
    "userspace/pds/fs-client",
    "userspace/pds/shell",
    "userspace/pds/edit",
    "userspace/pds/chat-client",
    "userspace/pds/http-file-browser",
    "userspace/pds/log-server",
    "userspace/pds/config-server",
    "userspace/crates/lerux-sync",
    "userspace/crates/lerux-virtio-hal",
    "userspace/crates/lerux-virtio-pci",
]

[workspace.dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-microkit = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-pl011-driver = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-driver-interfaces = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-microkit-driver-adapters = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-microkit-simple-ipc = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-logging = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-sync = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-virtio-blk = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-virtio-net = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-virtio-hal-impl = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
lerux-virtio-hal = { path = "userspace/crates/lerux-virtio-hal" }
lerux-virtio-pci = { path = "userspace/crates/lerux-virtio-pci" }
sel4-sp804-driver = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-pl031-driver = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-shared-memory = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-shared-ring-buffer = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-shared-ring-buffer-block-io-types = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-shared-ring-buffer-block-io = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-shared-ring-buffer-bookkeeping = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-shared-ring-buffer-smoltcp = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
sel4-abstract-allocator = { git = "https://github.com/seL4/rust-sel4", tag = "v4.0.0" }
smoltcp = { version = "0.13.0", default-features = false }
virtio-drivers = { version = "0.13.0", default-features = false }
embedded-hal-nb = "1.0"
lock_api = "0.4.14"
log = "0.4"
serde = { version = "1", default-features = false, features = ["derive"] }
heapless = { version = "0.9", default-features = false }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
redundant_clone = "warn"
needless_collect = "warn"
large_enum_variant = "warn"