[workspace]
resolver = "2"
members = [
    "daemon",
    "scheme-utils",
    "lerux-entry",
    "lerux-shim",
    "lerux-proc",
    "rt-bin",
    "init",
    "logd",
    "zerod",
    "randd",
    "ramfs",
    "drivers/common",
    "drivers/rtcd",
]
exclude = ["bootstrap", "initfs", "initfs-tools"]

[workspace.dependencies]
anyhow = "1"
log = "0.4"
libredox = { version = "0.1.17", default-features = false, features = ["call", "protocol"] }
plain = "0.2.3"
redox-log = { path = "../vendor/redox-log" }
redox-scheme = { version = "0.11.1", default-features = false }
redox_syscall = { version = "0.8.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slab = "0.4.9"
toml = "1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.lints.rust]
missing_docs = "allow"

[workspace.lints.clippy]
missing_safety_doc = "warn"
precedence = "deny"
