[workspace]
resolver = "2"
members = [
    "config",
    "daemon",
    "scheme-utils",
    "init",
    "logd",
    "zerod",
    "randd",
    "ramfs",
    "ptyd",
    "drivers/common",
    "drivers/rtcd",
    "drivers/pcid",
    "drivers/pcid-spawner",
    "drivers/virtio-core",
    "drivers/executor",
    "drivers/storage/driver-block",
    "drivers/storage/partitionlib",
    "drivers/storage/virtio-blkd",
]
exclude = ["bootstrap", "initfs", "initfs-tools"]

[workspace.dependencies]
anyhow = "1"
bincode = "1.2"
bitflags = "2"
crossbeam-queue = "0.3.8"
fdt = "0.1.5"
futures = "0.3.28"
libc = "0.2.181"
log = "0.4"
libredox = "0.1.17"
pci_types = "0.10.1"
pico-args = "0.5"
plain = "0.2.3"
redox-log = { path = "../vendor/redox-log" }
redox-scheme = "0.11.1"
redox_event = "0.4.7"
redox_syscall = { version = "0.8.0", features = ["std"] }
redox_termios = "0.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slab = "0.4.9"
spin = "0.10"
static_assertions = "1.1.0"
thiserror = "2"
toml = "1"

[workspace.lints.rust]
missing_docs = "allow"

[workspace.lints.clippy]
missing_safety_doc = "warn"
precedence = "deny"
