[package]
name = "daemon"
description = "Redox daemon library"
version = "0.0.0"
edition = "2024"

[dependencies]
lerux-entry = { path = "../lerux-entry" }
libredox.workspace = true
redox-scheme = { workspace = true, default-features = false }
redox_syscall.workspace = true

[lints]
workspace = true
