[package]
name = "init"
description = "Userspace process launcher"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
lerux-entry = { path = "../lerux-entry" }
lerux-proc = { path = "../lerux-proc" }
lerux-shim = { path = "../lerux-shim" }
libredox.workspace = true
redox_syscall.workspace = true
rt-bin = { path = "../rt-bin" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lints]
workspace = true
