[package]
name = "redox-initfs-tools"
version = "0.2.0"
authors = ["4lDO2 <4lDO2@protonmail.com>", "Kamil Koczurek <koczurekk@gmail.com>"]
edition = "2021"
description = "Tooling to archive a directory into an userspace bootstrap image (initfs)"
license = "MIT"

[[bin]]
name = "redox-initfs-ar"
path = "src/bin/archive.rs"

[[bin]]
name = "redox-initfs-dump"
path = "src/bin/dump.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
env_logger = "0.8"
log = "0.4"
pathdiff = "0.2.1"
plain = "0.2.3"
twox-hash = "1.6"

redox-initfs = { path = "../initfs" }

[dev-dependencies]
redox-initfs = { path = "../initfs" }
