[package]
name = "lerux-filesystem"
description = "Lerux filesystem (RedoxFS-compatible fork for lerux)"
repository = "https://gitlab.redox-os.org/redox-os/redoxfs"
version = "0.9.0"
license-file = "LICENSE"
readme = "README.md"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
edition = "2021"

[workspace]
# Standalone crate (lerux fork of vendored redoxfs). Keep its target/ and build
# independent from the userspace/ workspace (like bootstrap and rustc-smoke).
# just recipes supply the full cross RUSTFLAGS/sysroot for the x86_64-unknown-redox target.

[lib]
name = "lerux_filesystem"
path = "src/lib.rs"

[[bin]]
name = "redoxfs"
path = "src/bin/mount.rs"
doc = false
# No required-features: mount.rs now has additive cfgs so the daemon bin compiles for both
# std (hybrid, default features) and no_std ( --no-default-features --features redox-daemon ).
# The original main/daemon/fork etc remain intact under #[cfg(feature = "std")].
# The no_std entrypoint (memory_daemon + main for smoke under RUNTIME_REDOXFS) is behind not(feature="std").

[[bin]]
name = "redoxfs-ar"
path = "src/bin/ar.rs"
doc = false
required-features = ["std"]

[[bin]]
name = "redoxfs-clone"
path = "src/bin/clone.rs"
doc = false
required-features = ["std"]

[[bin]]
name = "redoxfs-mkfs"
path = "src/bin/mkfs.rs"
doc = false
required-features = ["std"]

[[bin]]
name = "redoxfs-populate"
path = "src/bin/populate.rs"
doc = false
required-features = ["std"]

[[bin]]
name = "redoxfs-resize"
path = "src/bin/resize.rs"
doc = false
required-features = ["std"]

[dependencies]
aes = { version = "0.8", default-features = false }
argon2 = { version = "0.4", default-features = false, features = ["alloc"] }
base64ct = { version = "1", default-features = false }
bitflags = "2"
endian-num = "0.1"
env_logger = { version = "0.11", optional = true }
getrandom = { version = "0.2.5", optional = true }
humansize = { version = "2", optional = true }
libc = "0.2"
log = { version = "0.4.14", default-features = false, optional = true }
lz4_flex = { version = "0.11", default-features = false, features = ["checked-decode"] }
parse-size = { version = "1", optional = true }
range-tree = { version = "0.1", optional = true }
redox_syscall = "0.8.0"
seahash = { version = "4.1.0", default-features = false }
termion = { version = "4", optional = true }
uuid = { version = "1.4", default-features = false }
xts-mode = { version = "0.5", default-features = false }

[features]
default = ["std", "log", "fuse"]
fuse = [
    "fuser",
    "std",
]
std = [
    "env_logger",
    "getrandom",
    "humansize",
    "libredox",
    "parse-size",
    "range-tree",
    "termion",
    "uuid/v4",
    "redox_syscall/std",
    "redox-scheme",
]
# Post-green runtime port:
# "redox-daemon" enables building the scheme daemon (bin/mount.rs) using userspace/runtime/
# (redox-rt for proc, signals, thread, etc.) instead of libc/libredox + relibc hybrid.
# The lib supports no_std (via no-default-features); the bin is being incrementally ported.
# Keep "std" for hybrid builds during transition.
# Note: the default smoke path in justfile now uses --features std (without "redox-daemon")
# precisely to avoid pulling the redox-rt dep (which has its own libredox requirement) and
# to reduce version skew when "redox-scheme" is also activated by std.
redox-daemon = []

[target.'cfg(not(target_os = "redox"))'.dependencies]
fuser = { version = "0.16", optional = true }

[target.'cfg(target_os = "redox")'.dependencies]
daemon = { path = "../daemon" }
libredox = { version = "0.1.17", optional = true }
redox-path = "0.3.0"
redox-scheme = { version = "0.11.0", optional = true }
# no_std runtime for daemon under redox-daemon feature
redox-rt = { path = "../runtime/redox-rt", optional = true, default-features = false, features = ["proc"] }



[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20.0"
