[package]
name = "lerux-shim"
description = "libredox call ABI (redox_*_v1) without relibc"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
ioslice = { version = "0.6", default-features = false }
redox-rt = { path = "../runtime/redox-rt" }
redox_syscall = { version = "0.8.0", default-features = false }
redox_protocols = { package = "libredox", version = "0.1.17", default-features = false, features = ["protocol"] }

[lints]
workspace = true
