[package]
name = "logd"
description = "Logging daemon"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
edition = "2024"

[dependencies]
daemon = { path = "../daemon" }
lerux-entry = { path = "../lerux-entry" }
lerux-shim = { path = "../lerux-shim" }
libredox.workspace = true
redox-scheme = { workspace = true, default-features = false }
redox_syscall.workspace = true
rt-bin = { path = "../rt-bin" }
scheme-utils = { path = "../scheme-utils" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lints]
workspace = true
