[package]
name = "ramfs"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2024"
license = "MIT"
description = "RAM filesystem (lerux minimal scheme stub)"

[dependencies]
daemon = { path = "../daemon" }
lerux-entry = { path = "../lerux-entry" }
lerux-shim = { path = "../lerux-shim" }
libredox.workspace = true
redox-scheme = { workspace = true, default-features = false }
redox_syscall.workspace = true
rt-bin = { path = "../rt-bin" }
scheme-utils = { path = "../scheme-utils" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lints]
workspace = true
