[package]
name = "lerux-interface-types"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Postcard-serialized RPC message types shared between lerux protection domains"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
postcard = { version = "1.1", default-features = false }