[package]
name = "lerux-logging"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "lerux logging helpers built on sel4-logging"

[lints]
workspace = true

[features]
default = []
serial = ["dep:embedded-hal-nb", "dep:sel4-microkit", "dep:sel4-microkit-driver-adapters"]

[dependencies]
log = { workspace = true }
sel4 = { workspace = true }
sel4-logging = { workspace = true }
embedded-hal-nb = { workspace = true, optional = true }
sel4-microkit = { workspace = true, optional = true }
sel4-microkit-driver-adapters = { workspace = true, optional = true }
