[package]
name = "backup"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "FS snapshot / backup PD (Phase 58)"

[lints]
workspace = true

[features]
board-qemu_virt_aarch64_workstation = []
board-rpi4b_4gb_workstation = []

[dependencies]
lerux-interface-types = { path = "../../crates/lerux-interface-types" }
lerux-ipc = { path = "../../crates/lerux-ipc" }
lerux-logging = { path = "../../crates/lerux-logging" }
sel4-microkit = { workspace = true }
