[package]
name = "blk-client"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints]
workspace = true

[dependencies]
lerux-interface-types = { path = "../../crates/lerux-interface-types" }
lerux-ipc = { path = "../../crates/lerux-ipc" }
lerux-logging = { path = "../../crates/lerux-logging", features = ["serial"] }
sel4-microkit = { workspace = true }