[package]
name = "blk-client"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints]
workspace = true

[features]
board-qemu_virt_aarch64_blk = []
board-qemu_virt_riscv64_blk = []
board-x86_64_generic_blk = []
board-qemu_virt_aarch64_blk_composed = ["composed-sync"]
composed-sync = []

[dependencies]
lerux-interface-types = { path = "../../crates/lerux-interface-types" }
lerux-ipc = { path = "../../crates/lerux-ipc" }
lerux-logging = { path = "../../crates/lerux-logging", features = ["serial"] }
sel4-microkit = { workspace = true }