[package]
name = "boot-init"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
board-qemu_virt_aarch64_init = []
board-qemu_virt_aarch64_composed = []
board-qemu_virt_aarch64_http_composed = []

[dependencies]
lerux-logging = { path = "../../crates/lerux-logging", features = ["serial"] }
rtcc = "0.4"
sel4-driver-interfaces = { workspace = true }
sel4-microkit = { workspace = true }
sel4-microkit-driver-adapters = { workspace = true }