[package]
name = "echo-client"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
lerux-ipc = { path = "../../crates/lerux-ipc" }
lerux-interface-types = { path = "../../crates/lerux-interface-types" }
lerux-logging = { path = "../../crates/lerux-logging", features = ["serial"] }
sel4-microkit = { workspace = true }