[package]
name = "echo-client"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints]
workspace = true

[features]
bench = []
board-qemu_virt_aarch64_echo = []
board-qemu_virt_aarch64_bench_echo = ["bench"]
board-qemu_virt_riscv64_echo = []
board-x86_64_generic_echo = []

[dependencies]
lerux-ipc = { path = "../../crates/lerux-ipc" }
lerux-interface-types = { path = "../../crates/lerux-interface-types" }
lerux-logging = { path = "../../crates/lerux-logging", features = ["serial"] }
sel4-microkit = { workspace = true }
