[package]
name = "emmc2-driver"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints]
workspace = true

[features]
board-rpi4b_4gb_blk = []

[dependencies]
lerux-logging = { path = "../../crates/lerux-logging" }
log = { workspace = true }
sel4 = { workspace = true }
sel4-microkit = { workspace = true }
sel4-microkit-driver-adapters = { workspace = true }
sel4-shared-memory = { workspace = true }
sel4-shared-ring-buffer = { workspace = true }
sel4-shared-ring-buffer-block-io-types = { workspace = true }
embedded-hal-nb = { workspace = true }
heapless = { workspace = true }
